tests/paczka1/fuzzy1/49467037.err
Error in line 3: K1hMwAy A725 67,3
Error in line 2: WZ7 A122 62,8
Error in line 5: WZ7 A725 20,9
Error in line 4: K1hMwAy S823 16,3
Error in line 19: S823 S230 76,7
Error in line 25: Ml8rNjov S823 -2,4
Error in line 21: Ml8rNjov S823 40,4
Error in line 11: K1hMwAy A122 35,0
Error in line 30: 496w A725 28,2
Error in line 24: WZ7 A725 86,8
Error in line 36: LnfytRvQ1Jv S230 66,4
